--- a/atom-model/pom.xml
+++ b/atom-model/pom.xml
@@ -19,5 +19,12 @@
     <version>1.0.0-SNAPSHOT</version>
     
     <packaging>jar</packaging>
+    
+    <dependencies>
+		<dependency>
+			<groupId>org.jbasics</groupId>
+			<artifactId>jbasics</artifactId>
+		</dependency>
+	</dependencies>
 
 </project>
