--- a/atom-model/pom.xml
+++ b/atom-model/pom.xml
@@ -25,6 +25,23 @@
 			<groupId>org.jbasics</groupId>
 			<artifactId>jbasics</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>javax.ws.rs</groupId>
+			<artifactId>jsr311-api</artifactId>
+			<optional>true</optional>
+		</dependency>
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-server</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-client</artifactId>
+        </dependency>
+		<dependency>
+            <groupId>com.sun.grizzly</groupId>
+            <artifactId>grizzly-servlet-webserver</artifactId>
+        </dependency>
 	</dependencies>
 
 </project>
