--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,7 @@
 			</roles>
 		</developer>
 	</developers>
-	
+
 	<contributors>
 		<contributor>
 			<name>Stefan Tilkov</name>
@@ -100,13 +100,41 @@
 			<version>4.4</version>
 		</dependency>
 	</dependencies>
-	
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
 				<groupId>org.jbasics</groupId>
 				<artifactId>jbasics</artifactId>
 				<version>1.0.0-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-codec</groupId>
+				<artifactId>commons-codec</artifactId>
+				<version>1.2</version>
+			</dependency>
+			<dependency>
+				<groupId>javax.ws.rs</groupId>
+				<artifactId>jsr311-api</artifactId>
+				<version>1.0</version>
+			</dependency>
+	        <dependency>
+	            <groupId>com.sun.jersey</groupId>
+	            <artifactId>jersey-server</artifactId>
+	            <version>1.0.2</version>
+	            <scope>test</scope>
+	        </dependency>
+	        <dependency>
+	            <groupId>com.sun.jersey</groupId>
+	            <artifactId>jersey-client</artifactId>
+	            <version>1.0.2</version>
+	            <scope>test</scope>
+	        </dependency>
+			<dependency>
+				<groupId>com.sun.grizzly</groupId>
+				<artifactId>grizzly-servlet-webserver</artifactId>
+				<version>1.8.6.4</version>
+				<scope>test</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -153,13 +181,13 @@
 						<java>SLASHSTAR_STYLE</java>
 					</mapping>
 					<aggregate>true</aggregate>
-                    <includes>
-                        <include>src/**</include>
-                    </includes>
-                    <excludes>
-                        <exclude>.git/**</exclude>
-                    </excludes>
-                	<useDefaultExcludes>true</useDefaultExcludes>
+					<includes>
+						<include>src/**</include>
+					</includes>
+					<excludes>
+						<exclude>.git/**</exclude>
+					</excludes>
+					<useDefaultExcludes>true</useDefaultExcludes>
 				</configuration>
 				<executions>
 					<execution>
@@ -193,13 +221,15 @@
 									<property>file.encoding</property>
 									<message>You must have a file.encoding property</message>
 									<regex>^[iI][sS][oO]-8859-1$</regex>
-									<regexMessage>Your file.encoding property must be set to ISO-8859-1</regexMessage>
+									<regexMessage>Your file.encoding property must be set to
+										ISO-8859-1</regexMessage>
 								</requireProperty>
 								<requireProperty>
 									<property>maven.compiler.encoding</property>
 									<message>You must have a maven.compiler.encoding property</message>
 									<regex>^[iI][sS][oO]-8859-1$</regex>
-									<regexMessage>Your maven.compiler.encoding property must be set to ISO-8859-1</regexMessage>
+									<regexMessage>Your maven.compiler.encoding property must be set
+										to ISO-8859-1</regexMessage>
 								</requireProperty>
 							</rules>
 						</configuration>
@@ -273,44 +303,44 @@
 				<artifactId>maven-changes-plugin</artifactId>
 				<configuration>
 					<issueLinkTemplate>%URL%#issue/%ISSUE%</issueLinkTemplate>
-                </configuration>
-                <reportSets>
-                    <reportSet>
-                        <reports>
-                            <report>changes-report</report>
-                        </reports>
-                    </reportSet>
-                </reportSets>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>taglist-maven-plugin</artifactId>
-                <configuration>
-                	<xrefLocation>${project.reporting.outputDirectory}/xref</xrefLocation>
-                	<testXrefLocation>${project.reporting.outputDirectory}/xref</testXrefLocation>
-                    <tags>
-                        <tag>TODO</tag>
-                        <tag>FIXME</tag>
-                        <tag>@todo</tag>
-                        <tag>@fixme</tag>
-                        <tag>@deprecated</tag>
-                    </tags>
-                </configuration>
-            </plugin>
+				</configuration>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<report>changes-report</report>
+						</reports>
+					</reportSet>
+				</reportSets>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>taglist-maven-plugin</artifactId>
+				<configuration>
+					<xrefLocation>${project.reporting.outputDirectory}/xref</xrefLocation>
+					<testXrefLocation>${project.reporting.outputDirectory}/xref</testXrefLocation>
+					<tags>
+						<tag>TODO</tag>
+						<tag>FIXME</tag>
+						<tag>@todo</tag>
+						<tag>@fixme</tag>
+						<tag>@deprecated</tag>
+					</tags>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>versions-maven-plugin</artifactId>
 			</plugin>
 
 			<!-- Metric and bug finding -->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>jdepend-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>javancss-maven-plugin</artifactId>
-            </plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>jdepend-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>javancss-maven-plugin</artifactId>
+			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>findbugs-maven-plugin</artifactId>
@@ -329,15 +359,15 @@
 					<minimumTokens>100</minimumTokens>
 					<targetJdk>1.5</targetJdk>
 					<!-- Rule sets that come bundled with PMD -->
-                    <rulesets>
-                        <ruleset>/rulesets/basic.xml</ruleset>
-                        <ruleset>/rulesets/braces.xml</ruleset>
-                        <ruleset>/rulesets/finalizers.xml</ruleset>
-                        <ruleset>/rulesets/imports.xml</ruleset>
-                        <ruleset>/rulesets/migrating.xml</ruleset>
-                        <ruleset>/rulesets/strings.xml</ruleset>
-                        <ruleset>/rulesets/unusedcode.xml</ruleset>
-                    </rulesets>
+					<rulesets>
+						<ruleset>/rulesets/basic.xml</ruleset>
+						<ruleset>/rulesets/braces.xml</ruleset>
+						<ruleset>/rulesets/finalizers.xml</ruleset>
+						<ruleset>/rulesets/imports.xml</ruleset>
+						<ruleset>/rulesets/migrating.xml</ruleset>
+						<ruleset>/rulesets/strings.xml</ruleset>
+						<ruleset>/rulesets/unusedcode.xml</ruleset>
+					</rulesets>
 				</configuration>
 			</plugin>
 
@@ -346,11 +376,11 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-report-plugin</artifactId>
 			</plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-            </plugin>
-            
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+			</plugin>
+
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>dashboard-maven-plugin</artifactId>
@@ -360,15 +390,15 @@
 
 	<pluginRepositories>
 		<pluginRepository>
-		    <id>mc-release</id>
-		    <name>Local Maven repository of releases</name>
-		    <url>http://mc-repo.googlecode.com/svn/maven2/releases</url>
-		    <snapshots>
-		        <enabled>false</enabled>
-		    </snapshots>
-		    <releases>
-		        <enabled>true</enabled>
-		    </releases>
+			<id>mc-release</id>
+			<name>Local Maven repository of releases</name>
+			<url>http://mc-repo.googlecode.com/svn/maven2/releases</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
 		</pluginRepository>
 	</pluginRepositories>
 
