--- a/atom-client/pom.xml
+++ b/atom-client/pom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="iso-8859-1" ?>
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd ">
-        
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd ">
+
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -11,24 +11,54 @@
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 
-    <name>Atomify Atom Client</name>
-   	<description>Client for the atom family</description>
+	<name>Atomify Atom Client</name>
+	<description>Client for the atom family</description>
 
-    <groupId>org.atomify</groupId>
-    <artifactId>atom-client</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-    
-    <packaging>jar</packaging>
+	<groupId>org.atomify</groupId>
+	<artifactId>atom-client</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
+
+	<packaging>jar</packaging>
 
 	<dependencies>
+		<dependency>
+			<groupId>de.rms.services.reporting</groupId>
+			<artifactId>reporting-service-embedded</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.atomify</groupId>
 			<artifactId>atom-model</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-client</artifactId>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
 			<groupId>javax.ws.rs</groupId>
 			<artifactId>jsr311-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-server</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.grizzly</groupId>
+			<artifactId>grizzly-servlet-webserver</artifactId>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
