--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,7 @@
 			<dependency>
 				<groupId>org.jbasics</groupId>
 				<artifactId>jbasics</artifactId>
-				<version>0.2.0</version>
+				<version>1.0.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>javax.ws.rs</groupId>
