Adding testing facility (WIP)

--- a/atom-service/pom.xml
+++ b/atom-service/pom.xml
@@ -29,6 +29,16 @@
 			<groupId>javax.ws.rs</groupId>
 			<artifactId>jsr311-api</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-server</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.grizzly</groupId>
+			<artifactId>grizzly-servlet-webserver</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 </project>
