--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<name>Atomify</name>
 	<groupId>org.atomify</groupId>
 	<artifactId>atomify-project</artifactId>
-	<version>0.2.1</version>
+	<version>1.0.0-SNAPSHOT</version>
 
 	<packaging>pom</packaging>
 
