--- a/atom-model/pom.xml
+++ b/atom-model/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.atomify</groupId>
 		<artifactId>atomify-project</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>0.2.3</version>
 	</parent>
 
 	<name>Atomify Atom Model</name>
@@ -15,7 +15,7 @@
 
 	<groupId>org.atomify</groupId>
 	<artifactId>atom-model</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>0.2.3</version>
 
 	<packaging>jar</packaging>
 
