--- a/atom-service/pom.xml
+++ b/atom-service/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.atomify</groupId>
 		<artifactId>atomify-project</artifactId>
-		<version>0.2.4</version>
+		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 
 	<name>Atomify Atom JAX-RS Service</name>
@@ -15,7 +15,7 @@
 
 	<groupId>org.atomify</groupId>
 	<artifactId>atom-service</artifactId>
-	<version>0.2.4</version>
+	<version>1.0.0-SNAPSHOT</version>
 
 	<packaging>jar</packaging>
 
@@ -23,7 +23,7 @@
 		<dependency>
 			<groupId>org.atomify</groupId>
 			<artifactId>atom-model</artifactId>
-			<version>0.2.4</version>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.ws.rs</groupId>
