--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,7 @@
 			<dependency>
 				<groupId>org.jbasics</groupId>
 				<artifactId>jbasics</artifactId>
-				<version>0.2.8</version>
+				<version>1.0.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>javax.ws.rs</groupId>
@@ -130,17 +130,6 @@
 				<version>1.9.18</version>
 				<scope>test</scope>
 			</dependency>
-			<dependency>
-				<groupId>javax.xml.bind</groupId>
-				<artifactId>jaxb-api</artifactId>
-				<version>2.1</version>
-			</dependency>
-			<dependency>
-				<groupId>com.sun.xml.bind</groupId>
-				<artifactId>jaxb-impl</artifactId>
-				<version>2.1.9</version>
-				<scope>test</scope>
-			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -160,8 +149,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
+					<source>1.6</source>
+					<target>1.6</target>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -205,7 +194,7 @@
 						<goals>
 							<goal>check</goal>
 						</goals>
-						<phase>compile</phase>
+						<phase>prepare-package</phase>
 					</execution>
 				</executions>
 			</plugin>
@@ -225,7 +214,7 @@
 									<version>2.1.0</version>
 								</requireMavenVersion>
 								<requireJavaVersion>
-									<version>1.5</version>
+									<version>1.6</version>
 								</requireJavaVersion>
 							</rules>
 						</configuration>
@@ -284,7 +273,7 @@
 						</reports>
 						<configuration>
 							<links>
-								<link>http://java.sun.com/javase/1.5.0/docs/api/</link>
+								<link>http://java.sun.com/javase/1.6.0/docs/api/</link>
 							</links>
 						</configuration>
 					</reportSet>
