--- a/atom-service/pom.xml
+++ b/atom-service/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.atomify</groupId>
+		<groupId>org.jbasics.atomify</groupId>
 		<artifactId>atomify-project</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
@@ -13,7 +13,6 @@
 	<name>Atomify Atom JAX-RS Service</name>
 	<description>JAX-RS based server implementation for atom publishing service</description>
 
-	<groupId>org.atomify</groupId>
 	<artifactId>atom-service</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 
@@ -21,7 +20,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.atomify</groupId>
+			<groupId>org.jbasics.atomify</groupId>
 			<artifactId>atom-model</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
@@ -35,9 +34,12 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-grizzly</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.sun.grizzly</groupId>
 			<artifactId>grizzly-servlet-webserver</artifactId>
-			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
