--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<name>Atomify</name>
 	<groupId>org.jbasics.atomify</groupId>
 	<artifactId>atomify-project</artifactId>
-	<version>0.3.0</version>
+	<version>0.3.1-SNAPSHOT</version>
 
 	<packaging>pom</packaging>
 
@@ -37,7 +37,7 @@
 		<connection>scm:git:git://github.com/schloepke/atomify.git</connection>
 		<developerConnection>scm:git:git://github.com/schloepke/atomify.git</developerConnection>
 		<url>http://github.com/schloepke/atomify</url>
-	  <tag>atomify-project-0.3.0</tag>
+	  <tag>HEAD</tag>
   </scm>
 
 	<issueManagement>
