--- a/atom-client/pom.xml
+++ b/atom-client/pom.xml
@@ -7,14 +7,14 @@
 	<parent>
 		<groupId>org.jbasics.atomify</groupId>
 		<artifactId>atomify-project</artifactId>
-		<version>0.3.0</version>
+		<version>0.3.1-SNAPSHOT</version>
 	</parent>
 
 	<name>Atomify Atom Client</name>
 	<description>Client for the atom family</description>
 
 	<artifactId>atom-client</artifactId>
-	<version>0.3.0</version>
+	<version>0.3.1-SNAPSHOT</version>
 
 	<packaging>jar</packaging>
 
@@ -22,7 +22,7 @@
 		<dependency>
 			<groupId>org.jbasics.atomify</groupId>
 			<artifactId>atom-model</artifactId>
-			<version>0.3.0</version>
+			<version>0.3.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
