Fixed required java version to exclude 1.8 for now

--- a/pom.xml
+++ b/pom.xml
@@ -208,7 +208,7 @@
 									<version>2.1.0</version>
 								</requireMavenVersion>
 								<requireJavaVersion>
-									<version>1.6</version>
+									<version>[1.7, 1.8)</version>
 								</requireJavaVersion>
 							</rules>
 						</configuration>
