--- a/atom-model/pom.xml
+++ b/atom-model/pom.xml
@@ -7,14 +7,14 @@
 	<parent>
 		<groupId>org.jbasics.atomify</groupId>
 		<artifactId>atomify-project</artifactId>
-		<version>0.3.2-SNAPSHOT</version>
+		<version>0.3.2</version>
 	</parent>
 
 	<name>Atomify Atom Model</name>
 	<description>Model for the atom family</description>
 
 	<artifactId>atom-model</artifactId>
-	<version>0.3.2-SNAPSHOT</version>
+	<version>0.3.2</version>
 
 	<packaging>jar</packaging>
 
